<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ctr_bg"
    tools:context=".ui.activity.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.MyMovies">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ctr_bg"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/purple_500"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Asep Sutisna">

            <ImageView
                android:layout_width="380dp"
                android:layout_height="320dp"
                android:layout_gravity="center|end"
                android:contentDescription="@string/image_description"
                android:scaleType="fitEnd"
                android:src="@drawable/asep_sutisna"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        android:padding="10dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/ic_backbutton"
                android:contentDescription="@string/image_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/favoriteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="46dp"
                android:backgroundTint="@color/yellow_200"
                android:contentDescription="@string/image_description"
                android:src="@drawable/favorite_selector"
                android:tint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="@color/movie_700" />

            <ImageView
                android:id="@+id/img_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_star_rate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favoriteButton" />

            <TextView
                android:id="@+id/vote_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/dummyVote"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/img_duration"
                app:layout_constraintStart_toEndOf="@id/img_duration"
                app:layout_constraintTop_toTopOf="@id/img_duration" />

            <TextView
                android:id="@+id/title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/poppins_bold"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/dummyTitle"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/back_button"
                app:layout_constraintTop_toTopOf="parent" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/poster_detail"
                android:layout_width="200dp"
                android:layout_height="245dp"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_sample"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_detail"
                app:riv_corner_radius="20dp" />

            <TextView
                android:id="@+id/popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tvPopularity"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vote_detail" />

            <TextView
                android:id="@+id/popularity_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/dummyPopularity"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/popularity"
                app:layout_constraintTop_toBottomOf="@id/popularity"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tvRelease"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/popularity_detail"
                app:layout_constraintTop_toBottomOf="@id/popularity_detail" />

            <TextView
                android:id="@+id/release_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/dummyRelease"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/tv_release"
                app:layout_constraintTop_toBottomOf="@id/tv_release"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tvLanguage"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/release_detail"
                app:layout_constraintTop_toBottomOf="@id/release_detail" />

            <TextView
                android:id="@+id/language_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/dummyLanguage"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/language"
                app:layout_constraintTop_toBottomOf="@id/language"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/overview_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tvOverview"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/language_detail"
                app:layout_constraintTop_toBottomOf="@id/language_detail" />

            <TextView
                android:id="@+id/sinopis_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/poppins"
                android:paddingStart="4dp"
                android:paddingEnd="8dp"
                android:text="@string/dummyOverview"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/overview_detail"
                app:layout_constraintTop_toBottomOf="@id/poster_detail" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>