<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.favorite.FavoriteFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:paddingBottom="6dp"
        app:tabIndicatorColor="@color/purple_500"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/inactiveText" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_favorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700" />

</LinearLayout>